--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,7 @@
             <a (click)="menu('contact')"><li>Contact</li></a>
             <a (click)="menu('policy')"><li>Privacy Policy</li></a>
             <a (click)="menu('disclaimer')"><li>Disclaimer</li></a>
+            <a (click)="exitAgnihotra()"><li>Exit</li></a>
           </ul>
         </div>
       </nav>
