--- a/src/app/policy/policy.page.html
+++ b/src/app/policy/policy.page.html
@@ -14,5 +14,32 @@
       We have a very simple privacy policy. We do not sell or share this app’s
       user data to any third parties.
     </div>
+
+    <div style="padding: 1rem 1rem 0 1rem; font-weight: 700">
+      Data Collection
+    </div>
+    <div style="font-size: 14px; padding: 1rem">
+      This app collects the following
+
+      <ol>
+        <li>GPS Location data to calculate the sunrise and sunset time.</li>
+        <li>
+          Device time to calculate the difference between current time and
+          Agnihotra time.
+        </li>
+      </ol>
+    </div>
+    <div style="font-size: 14px; padding: 1rem">
+      Some data collected by Google Play store are goverened by Google Play
+      Store’s privacy policy and Terms of use.
+    </div>
+    <div style="padding: 1rem 1rem 0 1rem; font-weight: 700">
+      GDPR Compliance
+    </div>
+    <div style="font-size: 14px; padding: 1rem">
+      This app does not collect and store users personal data in any cloud
+      storage locations. Only the last detected GPS location is stored in this
+      device.
+    </div>
   </div>
 </ion-content>
