--- a/src/app/disclaimer/disclaimer.page.html
+++ b/src/app/disclaimer/disclaimer.page.html
@@ -9,11 +9,23 @@
         width="24px "
       />
     </div>
-    <div style="padding: 1rem; font-weight: 700">Disclaimer</div>
-    <div style="font-size: 14px; padding: 1rem">
+    <div style="padding: 1rem; font-size: 16px; font-weight: 700">
+      Disclaimer
+    </div>
+    <div style="font-size: 14px; font-weight: bold; padding: 1rem 1rem 0 1rem">
+      Time Accuracy
+    </div>
+    <div style="font-size: 14px; padding: 1rem 1rem 0 1rem">
       In rare cases, there may be a few seconds difference observed in sunrise
       or sunset time data. VPRANA LLP or SQUAPL Pvt. Ltd. are not reponsible for
       inaccuracies as the time data is provided by a global time data vendor.
+    </div>
+    <div style="font-size: 14px; font-weight: bold; padding: 1rem 1rem 0 1rem">
+      Horoscope Prediction
+    </div>
+    <div style="font-size: 14px; font-weight: regular; padding: 1rem">
+      VPRANA LLP or SQUAPL Pvt. Ltd. are not responsible for the accuracy of
+      horoscope predictions offered in this app.
     </div>
   </div>
 </ion-content>
